[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "scoop-n-e" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.0",
    "monkeytype>=23.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_project_template"]
